@@ -1,3 +1,8 @@
+2007-02-06  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: compressed SVG files aren't XML files,
+	so .svgz files now use image/svg as their mime-type (Closes: #9873)
+
 2007-02-05  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Patch from Pino Toscano
